# bevy-shader-helper

./: Cargo.toml  README  README.md
.cargo/: config.toml
bevy-compute-build/: Cargo.toml
bevy-compute-build/assets/: hello.wgsl
bevy-compute-build/src/: internals.rs  lib.rs  template_filters.rs
bevy-compute-build/templates/: compute_shader.rs.liquid
bevy-compute-macros/: Cargo.toml
bevy-shader-build/: Cargo.toml
bevy-shader-build/assets/: hello.wgsl
bevy-shader-build/src/: internals.rs
bevy-shader-helper/: Cargo.toml
bevy-shader-helper/src/: builders.rs  internals.rs  lib.rs  texture_details.rs
bevy-shader-helper/src/internals/: binding.rs  buffers.rs  compute.rs  entries.rs  label.rs  pipeline.rs  plugin.rs
bevy-shader-macros/: Cargo.toml
bevy-shader-macros/src/: internals.rs  lib.rs
bevy-shader-macros/src/internals/: binding.rs  buffers.rs  entries.rs
bevy-shader-macros/tests/: buffer_group.rs  shader_data_details.rs  shader_entry.rs
bevy-shazzy/: Cargo.toml
bevy-shazzy-build/: Cargo.toml
bevy-shazzy-build/src/: internals.rs  lib.rs
bevy-shazzy-macros/: Cargo.toml
bevy-shazzy-macros/src/: internals.rs  lib.rs
bevy-shazzy-macros/src/internals/: buffers.rs
bevy-shazzy-macros/tests/: buffer_group.rs  shader_entry.rs
bevy-shazzy-tokens/: Cargo.toml
bevy-shazzy-tokens/src/: buffers.rs  call_path.rs  lib.rs
bevy-shazzy/src/: builders.rs  internals.rs  lib.rs  texture_details.rs
bevy-shazzy/src/internals/: binding.rs  buffers.rs  compute.rs  entries.rs  label.rs  pipeline.rs  plugin.rs
examples/: generated_hello.rs  generated_temp.rs
examples/hello_world/: Cargo.toml
examples/hello_world_no_builder/: Cargo.toml
examples/hello_world_no_builder/src/: main.rs  shader.rs
examples/hello_world_no_derive/: Cargo.toml
examples/hello_world_no_derive/assets/shaders/: hello.wgsl
examples/no_builder/: Cargo.toml
examples/no_builder/assets/shaders/: hello.wgsl
examples/no_builder/src/: main.rs  shader.rs
examples/no_derive/: Cargo.toml
examples/no_derive/src/: main.rs  shader.rs
