[workspace]
members = [
    "bevy-shazzy",
    "bevy-shazzy-macros",
    "bevy-shazzy-build",
    "examples/*",
    "bevy-shazzy-tokens",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bevy = "0.15"
bevy-shazzy = { path = "bevy-shazzy", default-features = false }
bevy-shazzy-macros = { path = "bevy-shazzy-macros" }
bevy-shazzy-tokens = { path = "bevy-shazzy-tokens" }
bevy-shazzy-build = { path = "bevy-shazzy-build" }
