[package]
name = "bevy-shazzy-build"
version = "0.0.1"
edition.workspace = true

[dependencies]
naga = { version = "23.1.0", features = ["wgsl-in"] }
thiserror = "2.0.9"
tracing = "0.1.41"
wgpu-types = "23.0.0"
# TODO: make optional with flag format
prettyplease = "0.2.25"
syn = { version = "2.0.94", features = ["full"] }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
