[package]
name = "bevy-shazzy"
version = "0.0.1"
edition.workspace = true

[dependencies]
tracing = "0.1.41"
bevy_ecs = "0.15"
bevy_render = "0.15"
bevy_asset = "0.15"
bevy_image = "0.15"
bevy_app = "0.15"
bevy_math = "0.15"
bevy-shazzy-macros = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:bevy-shazzy-macros"]